Update password field
- Set password to crypted confirmationToken
- Set confirmationToken to null
- redirect user to login page

--- a/api/templates/email/recover-password.html.twig
+++ b/api/templates/email/recover-password.html.twig
@@ -3,8 +3,9 @@
 </h3>
 
 <p>
+    Please copy <b>New Password</b> then you can start using it after clicking the link below :<br><br>
     <b>Username :</b> {{user.getUsername()}}<br>
-    <b>New Password :</b> {{user.getConfirmationToken()}}<br>
-    Click <b><a href="{{ url('forgot_password', {'token': user.getConfirmationToken()}) }}">here</a></b> to start using new Password.<br>
+    <b>New Password :</b> {{user.getConfirmationToken()}}<br><br>
+    Click <a href="{{ url('forgot_password', {'token': user.getConfirmationToken()}) }}"><b>here</b></a> to start using new Password.<br>
     You can always change it later.
 </p>
