--- a/api/templates/base.html.twig
+++ b/api/templates/base.html.twig
@@ -6,7 +6,11 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+        <a href="{{ path('hwi_oauth_service_redirect', {'service': 'facebook' }) }}">
+    <span>Login with Facebook</span>
+</a>
+        {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
